load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@github_opensourceways_community_robot_lib//:image.bzl", "build_plugin_image", "push_image", "image_tags")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opensourceways/robot-gitee-tech4dx-label
gazelle(name = "gazelle")

build_plugin_image(
    name = "image",
    plugin = "robot-gitee-tech4dx-label",
)

push_image(
    name = "push_image",
    images = image_tags(
        target = ":image",
    ),
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "issue.go",
        "main.go",
        "robot.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-tech4dx-label",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_opensourceways_community_robot_lib//config:go_default_library",
        "@com_github_opensourceways_community_robot_lib//giteeclient:go_default_library",
        "@com_github_opensourceways_community_robot_lib//logrusutil:go_default_library",
        "@com_github_opensourceways_community_robot_lib//options:go_default_library",
        "@com_github_opensourceways_community_robot_lib//robot-gitee-framework:go_default_library",
        "@com_github_opensourceways_community_robot_lib//secret:go_default_library",
        "@com_github_opensourceways_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)

go_binary(
    name = "robot-gitee-tech4dx-label",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
